deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluepill
  labels:
    app: bluepill
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: bluepill
