deploy/admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: bluepill.default.svc
webhooks:
  - name: bluepill.default.svc
    clientConfig:
      service:
        name: bluepill
        namespace: default
        path: "/pill"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREekNDQWZlZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFmTVIwd0d3WURWUVFERXhSaWJIVmwKY0dsc2JDNWtaV1poZFd4MExuTjJZekFlRncweU5EQTBNamd4T1RNek1UTmFGdzB5TlRBME1qZ3hPVE16TVROYQpNQjh4SFRBYkJnTlZCQU1URkdKc2RXVndhV3hzTG1SbFptRjFiSFF1YzNaak1JSUJJakFOQmdrcWhraUc5dzBCCkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXBNa3lpa2k4bjNGV2FZcysyY1l3MzFWTHZ0SzE4UFpuVW0vMlRGajkKaUZxczdjYkxUcXdWaDNNU2NrWm1MQXRRd3l2dTAzNVU1VVdabURLWi9QMGRieExoNmV4N1RuTVBDQmU2b3F0SwpoRjBNMlczZ09v [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["networking.k8s.io"]
        apiVersions: ["v1"]
        resources: ["ingresses"]
        scope: "*"
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    timeoutSeconds: 5
